updating draft and adding figures

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,1 +1,28 @@
 \section{Conclusion}
+
+We examined the rotation period-color component of the \citep{angus2019}
+gyrochronology relation and found that groups of stars, selected to be the
+same age using this relation, do {\it not} have the same velocity dispersion
+across all temperatures.
+This indicates that {\it either} the \citep{angus2019} period-color relation
+is wrong, {\it or} that mass-dependent dynamical heating is affecting this
+data set.
+We found that the exponent of the AVR relation, calibrated using F and G stars
+in the Geneva-Copenhagen Survey, with ages estimated via isochrone-fitting, is
+greater than the exponent we find for the AVR relation fit to the most massive
+K dwarfs in our sample.
+Since mass-dependent dynamical heating should lead to a larger AVR exponent
+for lower-mass stars, this suggests that mass-dependent heating is not
+strongly affecting our sample.
+However, we used velocity in galactic latitude, \vb, not \vz, to calculate our
+AVRs, and while \vb\ is a close approximation to \vz\ at low galactic
+latitudes, it is not identical.
+Indeed, the \vz\ AVR should be larger than the \vb\ AVR, since orbital
+scattering is expected to have a strongest effect in the vertical direction.
+For the 290 stars in our sample with \gaia\ radial velocity measurements we
+measured the \vz\ AVR exponent to be larger than the \vb\ AVR exponent.
+
+For now, we cannot draw a strong conclusion regarding the origin of the
+observed increased velocity dispersion for stars of lower masses since either
+an incorrectly calibrated gyrochronology relation, or mass-dependent dynamical
+heating could be the cause.
