--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -1,4 +1,104 @@
-\section{Discussion}
+% \section{Discussion}
+% \label{sec:discussion}
 
-What if the M dwarfs just have larger velocity dispersion because they're less
-massive?
+% Aside from the assumption that mass-dependent dynamical heating is {\it not}
+% the main cause of the increased velocity dispersion for cooler stars, a number
+% of assumptions went into this analysis which should be addressed before a
+% strong conclusion about the nature of stellar spin down is drawn.
+% There are some potential confounders that could produce trends between
+% velocity dispersion and effective temperature, of which the main ones are
+% listed below.
+% \begin{itemize}
+
+    % \item{{\bf Extinction.}
+% Although we dereddened stars before their ages were estimated, if the
+    %     reddening values were underestimated, the gyrochronal ages of stars
+    %     would be under-estimated.
+% This effect would be largest for the late Ks and early Ms, where the shape of
+    %     the period-color relation is more steeply sloped, and stars can more
+    %     easily move into the wrong age bin with a small perturbation in color
+    %     or temperature.
+% Old stars would be incorrectly assigned young ages, and this would happen more
+    %     often for cooler stars.
+% This effect could lead to an increase in velocity dispersion with \teff, even
+% if the gyrochronology relation was perfect.}
+
+    % \item{{\bf Mass-dependent orbital heating.}
+% A key assumption going into this analysis is that the orbits of all stars are
+% heated at the same rate, regardless of their mass.
+% However, if the heating mechanism leads to preferential heating of lower mass
+% stars, those stars would have a larger velocity dispersion, not caused by
+% ageing.
+% No strong evidence has yet been provided to show a mass-dependence in orbital
+% heating, however this is an extremely difficult exercise because mass and age
+% are so strongly correlated.
+% The mass-age degeneracy is reduced in the lowest mass stars which represent
+    %     the initial mass function of the Solar neighborhood.
+% No mass-dependent heating was found by \citet{faherty2009} who looked
+% at the velocity dispersions of low-mass stars.
+% Another argument against the increased velocity dispersion as a function of
+    %     \teff\ being caused by mass-dependent orbital heating, is that heating
+    %     acts most strongly at young ages and most weakly at old ages, \ie\ on
+    %     a logarithmic timescale.
+% This is related to the fact that stars are more difficult to scatter once they
+% are on orbits with a large out-of-plane component and they spend more time out
+% of the mid-plane.
+% Our data show the opposite trend: stars show little mass-dependent heating
+    %     before around 1 Gyr.
+% Moreover, the stars in the Geneva-Copenhagen study, used to calibrate the AVR
+    %     \citep{holmberg2009} are F and G stars, around 1-3 times as massive as
+    %     the K stars in our sample.
+% % nordstrom2004, jorgensen2005,
+% The ages for our sample of K stars, predicted by gyrochronology agree with the
+    %     AVR calibrated using F and G stars, which implies that either
+    %     mass-dependent heating is a weak effect, or, mass-dependent heating is
+    %     strong and, by coincidence, gyrochronology underpredicts the ages of
+    %     the early K dwarfs by just the right amount that they still appear to
+    %     agree with the \citet{holmberg2009} AVR.
+% We therefore expect that the increased velocity dispersion at cooler
+    %     temperatures is mostly caused by incorrect age-grouping, \ie\ the
+    %     period-color relation is incorrect for old, low-mass stars, and that
+    %     any mass-dependent heating, while it may contribute at a low level to
+    %     this result, is not the dominant cause.
+% }
+
+    % \item{{\bf Selection bias.}
+% The \gaia\
+% catalog is incompletebecause they are too faint.
+% This is simply due to the fact that \kepler's field of view was aimed at low
+    %     galactic latitudes, so nearby \kepler\ stars are close to the galactic
+    %     plane.
+% The heights of stars above the galactic plane, and correspondingly their
+    %     velocities and ages, are therefore correlated with distance.
+% Almost no high velocity stars appear in our sample at temperatures cooler than
+% 3500, which is why the coolest stars were excluded from our sample, however
+% the selection function could still affect stars hotter than 3500 K, and is
+% suggested by the decrease in velocity dispersions for cool stars of all ages
+% in figure \ref{fig:age_cut}.
+% However, this selection effect would act in opposition to the observed trend.
+% }
+
+% \item{{\bf Weakened magnetic braking.}
+% The rotation periods of old stars are faster than predicted by Skumanich-like
+% magnetic braking \citep{angus2015, vansaders2016, metcalfe2019}.
+% Magnetic braking is expected to become inefficient once stars approach a
+% Rossby number (the ratio of rotation period to convective turnover time) of
+% around 2 \citep{vansaders2016, vansaders2018}.
+% Since hot stars have shallow convection zones and shorter overturn timescales,
+% they reach $Ro = 2$ and stop spinning down at shorter rotation periods than
+% cool stars.
+% For this reason, some of the hotter stars in the sample may already have
+% stopped spinning down, and could be much older than a traditional
+% gyrochronology relation (like the simple Praesepe-based relation used in this
+% analysis) would suggest.
+% However, this effect would work to cancel out the trend observed in figure
+% \ref{fig:age_cut} because hotter groups of stars would contain more old stars
+% with large velocities.
+% }
+
+% \item{Stellar or exoplanet companions.}
+% Hotter stars are more likely to be binaries.
+% This would make synchronized some stars seem younger, more likely for massive
+% stars, although really only likely at short rotation periods.
+
+\end{itemize}
