--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -50,6 +50,10 @@
 \newcommand{\logg}{log(g)}
 \newcommand{\dnu}{$\Delta \nu$}
 \newcommand{\numax}{$\nu_{\mathrm{max}}$}
+\newcommand{\degrees}{$^\circ$}
+\newcommand{\vz}{$v_z$}
+\newcommand{\vb}{$v_b$}
+\newcommand{\kms}{$kms^{-1}$}
 
 % \newcommand{\nsim_stars}{841}
 
@@ -63,7 +67,6 @@
 \newcommand{\mct}{\citet{mcquillan2014}}
 \newcommand{\bvector}{${\bf b}$}
 \newcommand{\python}{{\it Python}}
-\newcommand{\vb}{$v_{\bf b}$}
 
 \newcommand{\racomment}[1]{{\color{blue}#1}}
 
@@ -74,13 +77,17 @@ approach to calibrating gyrochronology}
 
 \author{%
     Ruth Angus,
+    Angus Beane,
     Adrian Price-Whelan,
     Jennifer van Saders,
     Elisabeth Newton,
     Travis Berger,
-    Gus Beane,
-    Rocio Kiman
-    \& Dan Huber}
+    Dan Foreman-Mackey,
+    Lauren Anderson,
+    Megan Bedell,
+    Jackie Faherty,
+    Rocio Kiman,
+    Melissa Ness}
 
 % \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
 % Manhattan, NY, USA}
@@ -93,29 +100,24 @@ approach to calibrating gyrochronology}
 
 % Word limit: 3500
 
-% Word limit: 250
+% Word limit: 250, currently 230
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750
+% Word limit: 750, currently: 674.
 \include{intro}
-% FIGURE: The gap
 
-% Word limit: 500
+% Word limit: 500, currently 336.
 \include{method}
-% FIGURE: The CMD.
-% FIGURE: The age histogram.
 
-% Word limit: 500
+% Word limit: 500, currently 1609
 \include{results}
-% FIGURE: V_B - period plot
-% FIGURE: V_B - age plot
 
-% Word limit: 500
-\include{discussion}
+% % Word limit: 500
+% \include{discussion}
 
-% Word limit: 500
+% Word limit: 250
 \include{conclusion}
 
 \include{acknowledgements}
