--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -62,7 +62,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{stardate,
-       author = {{Angus}, R. and {Morton}, T., D. and {Foreman-Mackey}, D.}
+       author = {{Angus}, R. and {Morton}, T., D. and {Foreman-Mackey}, D.},
         title = "{stardate: combining dating methods for better stellar ages}",
       journal = {\joss},
       doi = {10.5281/zenodo.2712419}
@@ -122,3 +122,369 @@ archivePrefix = "arXiv",
    adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190506869C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{holmberg2009,
+   author = {{Holmberg}, J. and {Nordstr{\"o}m}, B. and {Andersen}, J.},
+    title = "{The Geneva-Copenhagen survey of the solar neighbourhood. III. Improved distances, ages, and kinematics}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0811.3982},
+ keywords = {solar neighborhood, Galaxy: disk, Galaxy: stellar, content, Galaxy: kinematics and dynamics, Galaxy: evolution, stars: fundamental parameters},
+     year = 2009,
+    month = jul,
+   volume = 501,
+    pages = {941-947},
+      doi = {10.1051/0004-6361/200811191},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2009A%26A...501..941H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{nordstrom2004,
+   author = {{Nordstr{\"o}m}, B. and {Mayor}, M. and {Andersen}, J. and {Holmberg}, J. and
+	{Pont}, F. and {J{\o}rgensen}, B.~R. and {Olsen}, E.~H. and
+	{Udry}, S. and {Mowlavi}, N.},
+    title = "{The Geneva-Copenhagen survey of the Solar neighbourhood. Ages, metallicities, and kinematic properties of {\tilde}14 000 F and G dwarfs}",
+  journal = {\aap},
+   eprint = {astro-ph/0405198},
+ keywords = {Galaxy: disk, Galaxy: solar neighbourhood, Galaxy: stellar content, Galaxy: kinematics and dynamics, Galaxy: evolution, stars: fundamental parameters},
+     year = 2004,
+    month = may,
+   volume = 418,
+    pages = {989-1019},
+      doi = {10.1051/0004-6361:20035959},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2004A%26A...418..989N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{jorgensen2005,
+   author = {{J{\o}rgensen}, B.~R. and {Lindegren}, L.},
+    title = "{Determination of stellar ages from isochrones: Bayesian estimation versus isochrone fitting}",
+  journal = {\aap},
+ keywords = {stars: fundamental parameters, stars: evolution, solar neighbourhood, methods: data analysis, methods: statistical},
+     year = 2005,
+    month = jun,
+   volume = 436,
+    pages = {127-143},
+      doi = {10.1051/0004-6361:20042185},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2005A%26A...436..127J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{holmberg2007,
+   author = {{Holmberg}, J. and {Nordstr{\"o}m}, B. and {Andersen}, J.},
+    title = "{The Geneva-Copenhagen survey of the Solar neighbourhood II. New uvby calibrations and rediscussion of stellar ages, the G dwarf problem, age-metallicity diagram, and heating mechanisms of the disk}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0707.1891},
+ keywords = {Galaxy: stellar content, Galaxy: solar neighbourhood, Galaxy: disk, Galaxy: kinematics and dynamics, Galaxy: evolution, stars: fundamental parameters},
+     year = 2007,
+    month = nov,
+   volume = 475,
+    pages = {519-537},
+      doi = {10.1051/0004-6361:20077221},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2007A%26A...475..519H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{skumanich1972,
+   author = {{Skumanich}, A.},
+    title = "{Time Scales for CA II Emission Decay, Rotational Braking, and Lithium Depletion}",
+  journal = {\apj},
+     year = 1972,
+    month = feb,
+   volume = 171,
+    pages = {565},
+      doi = {10.1086/151310},
+   adsurl = {http://adsabs.harvard.edu/abs/1972ApJ...171..565S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{barnes2003,
+   author = {{Barnes}, S.~A.},
+    title = "{On the Rotational Evolution of Solar- and Late-Type Stars, Its Magnetic Origins, and the Possibility of Stellar Gyrochronology}",
+  journal = {\apj},
+   eprint = {astro-ph/0303631},
+ keywords = {Galaxy: Open Clusters and Associations: General, Stars: Evolution, Stars: Interiors, Stars: Late-Type, Stars: Magnetic Fields, Stars: Rotation},
+     year = 2003,
+    month = mar,
+   volume = 586,
+    pages = {464-479},
+      doi = {10.1086/367639},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...586..464B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{barnes2007,
+   author = {{Barnes}, S.~A.},
+    title = "{Ages for Illustrative Field Stars Using Gyrochronology: Viability, Limitations, and Errors}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0704.3068},
+ keywords = {Galaxy: Open Clusters and Associations: General, Stars: Activity, Stars: Evolution, Stars: Late-Type, Stars: Magnetic Fields, Stars: Rotation},
+     year = 2007,
+    month = nov,
+   volume = 669,
+    pages = {1167-1189},
+      doi = {10.1086/519295},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...669.1167B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mamajek2008,
+   author = {{Mamajek}, E.~E. and {Hillenbrand}, L.~A.},
+    title = "{Improved Age Estimation for Solar-Type Dwarfs Using Activity-Rotation Diagnostics}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0807.1686},
+ keywords = {Stars: Activity, Stars: Chromospheres, Stars: Coronae, Stars: Fundamental Parameters, Stars: Rotation, X-Rays: Stars},
+     year = 2008,
+    month = nov,
+   volume = 687,
+    pages = {1264-1293},
+      doi = {10.1086/591785},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...687.1264M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{meibom2011,
+   author = {{Meibom}, S. and {Barnes}, S.~A. and {Latham}, D.~W. and {Batalha}, N. and
+	{Borucki}, W.~J. and {Koch}, D.~G. and {Basri}, G. and {Walkowicz}, L.~M. and
+	{Janes}, K.~A. and {Jenkins}, J. and {Van Cleve}, J. and {Haas}, M.~R. and
+	{Bryson}, S.~T. and {Dupree}, A.~K. and {Furesz}, G. and {Szentgyorgyi}, A.~H. and
+	{Buchhave}, L.~A. and {Clarke}, B.~D. and {Twicken}, J.~D. and
+	{Quintana}, E.~V.},
+    title = "{The Kepler Cluster Study: Stellar Rotation in NGC 6811}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1104.2912},
+ primaryClass = "astro-ph.SR",
+ keywords = {open clusters and associations: individual: NGC 6811, stars: activity, stars: late-type, starspots, stars: rotation},
+     year = 2011,
+    month = may,
+   volume = 733,
+      eid = {L9},
+    pages = {L9},
+      doi = {10.1088/2041-8205/733/1/L9},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...733L...9M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{angus2015,
+   author = {{Angus}, R. and {Aigrain}, S. and {Foreman-Mackey}, D. and {McQuillan}, A.
+	},
+    title = "{Calibrating gyrochronology using Kepler asteroseismic targets}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1502.06965},
+ primaryClass = "astro-ph.EP",
+ keywords = {methods: statistical, stars: evolution, stars: fundamental parameters, stars: oscillations, stars: rotation, stars: solar-type},
+     year = 2015,
+    month = jun,
+   volume = 450,
+    pages = {1787-1798},
+      doi = {10.1093/mnras/stv423},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.450.1787A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vansaders2016,
+   author = {{van Saders}, J.~L. and {Ceillier}, T. and {Metcalfe}, T.~S. and
+	{Silva Aguirre}, V. and {Pinsonneault}, M.~H. and {Garc{\'{\i}}a}, R.~A. and
+	{Mathur}, S. and {Davies}, G.~R.},
+    title = "{Weakened magnetic braking as the origin of anomalously rapid rotation in old field stars}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {1601.02631},
+ primaryClass = "astro-ph.SR",
+     year = 2016,
+    month = jan,
+   volume = 529,
+    pages = {181-184},
+      doi = {10.1038/nature16168},
+   adsurl = {http://adsabs.harvard.edu/abs/2016Natur.529..181V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vansaders2018,
+   author = {{van Saders}, J.~L. and {Pinsonneault}, M.~H. and {Barbieri}, M.
+	},
+    title = "{Forward Modeling of the Kepler Stellar Rotation Period Distribution: Interpreting Periods from Mixed and Biased Stellar Populations}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1803.04971},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics},
+     year = 2018,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180304971V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{angus2018,
+       author = {{Angus}, Ruth and {Morton}, Timothy and {Aigrain}, Suzanne and
+         {Foreman-Mackey}, Daniel and {Rajpaul}, Vinesh},
+        title = "{Inferring probabilistic stellar rotation periods using Gaussian processes}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, techniques: photometric, stars: rotation, stars: solar-type, starspots, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2018",
+        month = "Feb",
+       volume = {474},
+       number = {2},
+        pages = {2094-2108},
+          doi = {10.1093/mnras/stx2109},
+archivePrefix = {arXiv},
+       eprint = {1706.05459},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474.2094A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{faherty2009,
+       author = {{Faherty}, Jacqueline K. and {Burgasser}, Adam J. and {Cruz}, Kelle L. and
+         {Shara}, Michael M. and {Walter}, Frederick M. and
+         {Gelino}, Christopher R.},
+        title = "{The Brown Dwarf Kinematics Project I. Proper Motions and Tangential Velocities for a Large Sample of Late-Type M, L, and T Dwarfs}",
+      journal = {\aj},
+     keywords = {astrometry, stars: fundamental parameters, stars: low-mass, brown dwarfs, Astrophysics},
+         year = "2009",
+        month = "Jan",
+       volume = {137},
+       number = {1},
+        pages = {1-18},
+          doi = {10.1088/0004-6256/137/1/1},
+archivePrefix = {arXiv},
+       eprint = {0809.3008},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009AJ....137....1F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{west2011,
+       author = {{West}, Andrew A. and {Morgan}, Dylan P. and {Bochanski}, John J. and
+         {Andersen}, Jan Marie and {Bell}, Keaton J. and {Kowalski}, Adam F. and
+         {Davenport}, James R.~A. and {Hawley}, Suzanne L. and
+         {Schmidt}, Sarah J. and {Bernat}, David and {Hilton}, Eric J. and
+         {Muirhead}, Philip and {Covey}, Kevin R. and
+         {Rojas-Ayala}, B{\'a}rbara and {Schlawin}, Everett and {Gooding}, Mary and
+         {Schluns}, Kyle and {Dhital}, Saurav and {Pineda}, J. Sebastian and
+         {Jones}, David O.},
+        title = "{The Sloan Digital Sky Survey Data Release 7 Spectroscopic M Dwarf Catalog. I. Data}",
+      journal = {\aj},
+     keywords = {brown dwarfs, Galaxy: kinematics and dynamics, stars: abundances, stars: activity, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2011",
+        month = "Mar",
+       volume = {141},
+       number = {3},
+          eid = {97},
+        pages = {97},
+          doi = {10.1088/0004-6256/141/3/97},
+archivePrefix = {arXiv},
+       eprint = {1101.1082},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....141...97W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{brown2011,
+       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
+         {Esquerdo}, Gilbert A.},
+        title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
+      journal = {\aj},
+     keywords = {catalogs, methods: data analysis, surveys, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2011",
+        month = "Oct",
+       volume = {142},
+       number = {4},
+          eid = {112},
+        pages = {112},
+          doi = {10.1088/0004-6256/142/4/112},
+archivePrefix = {arXiv},
+       eprint = {1102.0342},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....142..112B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{douglas2019,
+       author = {{Douglas}, S.~T. and {Curtis}, J.~L. and {Ag{\"u}eros}, M.~A. and
+         {Cargile}, P.~A. and {Brewer}, J.~M. and {Meibom}, S. and {Jansen}, T.},
+        title = "{K2 Rotation Periods for Low-mass Hyads and a Quantitative Comparison of the Distribution of Slow Rotators in the Hyades and Praesepe}",
+      journal = {\apj},
+     keywords = {open clusters and associations: individual: Hyades, Praesepe, stars: evolution, stars: late-type, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Jul",
+       volume = {879},
+       number = {2},
+          eid = {100},
+        pages = {100},
+          doi = {10.3847/1538-4357/ab2468},
+archivePrefix = {arXiv},
+       eprint = {1905.06736},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...879..100D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{metcalfe2019,
+       author = {{Metcalfe}, Travis S. and {Egeland}, Ricky},
+        title = "{Understanding the Limitations of Gyrochronology for Old Field Stars}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: evolution, stars: magnetic field, stars: rotation, stars: solar-type, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Jan",
+       volume = {871},
+       number = {1},
+          eid = {39},
+        pages = {39},
+          doi = {10.3847/1538-4357/aaf575},
+archivePrefix = {arXiv},
+       eprint = {1811.11905},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...871...39M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{angus2019,
+       author = {{Angus}, Ruth},
+        title = "{Towards precise stellar ages: combining isochrone fitting
+            with empirical gyrochronology}",
+      journal = {\aj},
+     keywords = {stars: activity, stars: evolution, stars: magnetic field, stars: rotation, stars: solar-type, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = "in prep",
+ primaryClass = {astro-ph.SR},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{green2018,
+       author = {{M. Green}, Gregory},
+        title = "{dustmaps: A Python interface for maps of interstellar dust}",
+      journal = {The Journal of Open Source Software},
+         year = "2018",
+        month = "Jun",
+       volume = {3},
+       number = {26},
+        pages = {695},
+          doi = {10.21105/joss.00695},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018JOSS....3..695M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{brandt2015,
+       author = {{Brandt}, Timothy D. and {Huang}, Chelsea X.},
+        title = "{The Age and Age Spread of the Praesepe and Hyades Clusters: a Consistent, \raisebox{-0.5ex}\textasciitilde800 Myr Picture from Rotating Stellar Models}",
+      journal = {\apj},
+     keywords = {galaxies: clusters: individual: Hyades, Praesepe, Hertzsprung─Russell and C─M diagrams, methods: statistical, stars: early-type, stars: evolution, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2015",
+        month = "Jul",
+       volume = {807},
+       number = {1},
+          eid = {24},
+        pages = {24},
+          doi = {10.1088/0004-637X/807/1/24},
+archivePrefix = {arXiv},
+       eprint = {1504.00004},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...807...24B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
